<resources>
    <string name="app_name">15 Puzzle</string>
    <string name="background">background</string>
    <string name="puzzle15">15 Puzzle</string>
    <string name="classical">Classical puzzle</string>
    <string name="solveapicture">Solve a picture</string>
    <string name="settings">Settings</string>
    <string name="highscores">High scores</string>
    <string name="classicalwithholes">Classical with a hole</string>
    <string name="tab_classical">Classical</string>
    <string name="tab_picture">Picture</string>
    <string name="tab_hole">Hole</string>
    <string name="about">About the game - Rules</string>
    <string name="quitgame">Quit game</string>
    <string name="steps30">30 steps</string>
    <string name="steps50">50 steps</string>
    <string name="steps100">100 steps</string>
    <string name="steps300">300 steps</string>
    <string name="steps500">500 steps</string>
    <string name="shuffle">Shuffle</string>
    <string name="moves">Moves</string>
    <string name="time">Time</string>
    <string name="youwon">You won!</string>
    <string name="top5moves">Top 5 moves</string>
    <string name="top5times">Top 5 times</string>
    <string name="rules1">The 15-puzzle (also called Gem Puzzle, Boss Puzzle, Game of Fifteen, Mystic Square and many others) is a sliding puzzle that consists of a frame of numbered square tiles in random order with one tile missing. The puzzle also exists in other sizes, particularly the smaller 8-puzzle. If the size is 3x3 tiles, the puzzle is called the 8-puzzle or 9-puzzle, and if 4x4 tiles, the puzzle is called the 15-puzzle or 16-puzzle named, respectively, for the number of tiles and the number of spaces. The object of the puzzle is to place the tiles in order by making sliding moves that use the empty space.</string>
    <string name="rules2">The puzzle was "invented" by Noyes Palmer Chapman, a postmaster in Canastota, New York, who is said to have shown friends, as early as 1874, a precursor puzzle consisting of 16 numbered blocks that were to be put together in rows of four, each summing to 34. Copies of the improved Fifteen Puzzle made their way to Syracuse, New York, by way of Noyes\' son, Frank, and from there, via sundry connections, to Watch Hill, RI, and finally to Hartford (Connecticut), where students in the American School for the Deaf started manufacturing the puzzle and, by December 1879, selling them both locally and in Boston, Massachusetts. Shown one of these, Matthias Rice, who ran a fancy woodworking business in Boston, started manufacturing the puzzle sometime in December 1879 and convinced a "Yankee Notions" fancy goods dealer to sell them under the name of "Gem Puzzle". In late January 1880, Dr. Charles Pevey, a dentist in Worcester, Massachusetts, garnered some attention by offering a cash reward for a solution to the Fifteen Puzzle.</string>
    <string name="theme">Theme:</string>
    <string name="victorian">Victorian</string>
    <string name="steampunk">Steampunk</string>
    <string name="music">Music:</string>
    <string name="sound">Sound:</string>
    <string name="saveconfig">Save</string>
    <string name="settingssaved">Settings are saved</string>
    <string name="usedartsandcredits">Used arts and credits</string>
    <string name="usedmusic">Music</string>
    <string name="usedimages">Images</string>
    <string name="usedfonts">Fonts</string>

</resources>
