<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sanya.puzzle15.MainActivity">

    <ImageView
        style="@style/startbackground"
        android:contentDescription="@string/background"
        android:id="@+id/image_startbackground"
        android:src="@drawable/bg_sp" />

    <LinearLayout
        style="@style/splashscreen"
        android:id="@+id/layout_splashscreen"
        android:background="@drawable/vic_background_frame">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview_gametitle"
            style="@style/gametitle"
            android:text="@string/puzzle15"/>

        <TextView
            style="@style/gamebuttons"
            android:id="@+id/button_startclassical"
            android:text="@string/classical"/>

        <TextView
            style="@style/gamebuttons"
            android:id="@+id/button_startpicture"
            android:text="@string/solveapicture"/>

        <TextView
            style="@style/gamebuttons"
            android:id="@+id/button_starthole"
            android:text="@string/classicalwithholes"/>

        <TextView
            android:id="@+id/button_highscores"
            style="@style/gamebuttons"
            android:text="@string/highscores"/>

        <TextView
            style="@style/gamebuttons"
            android:id="@+id/button_settings"
            android:text="@string/settings"/>

        <TextView
            android:id="@+id/button_rules"
            style="@style/gamebuttons"
            android:text="@string/about"/>

        <TextView
            android:id="@+id/button_quitgame"
            android:layout_marginBottom="@dimen/double_margin"
            style="@style/gamebuttons"
            android:text="@string/quitgame"/>

    </LinearLayout>

</RelativeLayout>