<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sanya.puzzle15.MainActivity">

    <LinearLayout
        android:id="@+id/row1"
        style="@style/rowlayouts"></LinearLayout>

    <LinearLayout
        android:id="@+id/row2"
        style="@style/rowlayouts"></LinearLayout>

    <LinearLayout
        android:id="@+id/row3"
        style="@style/rowlayouts"></LinearLayout>

    <LinearLayout
        android:id="@+id/row4"
        style="@style/rowlayouts"></LinearLayout>

    <LinearLayout
        style="@style/radionshuffle">

        <LinearLayout style="@style/wrapped">

            <RadioGroup
                android:id="@+id/radiogroup"
                style="@style/wrapped">

                <RadioButton
                    android:id="@+id/button30"
                    android:tag="30"
                    style="@style/wrapped"
                    android:text="@string/steps30" />

                <RadioButton
                    android:id="@+id/button50"
                    android:tag="50"
                    style="@style/wrapped"
                    android:text="@string/steps50" />

                <RadioButton
                    android:id="@+id/button100"
                    android:tag="100"
                    style="@style/wrapped"
                    android:text="@string/steps100" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout style="@style/ll_shufflebutton">

            <Spinner
                android:visibility="gone"
                android:id="@+id/spinner1"
                style="@style/wrapped"
                android:background="@android:drawable/btn_dropdown"                                                android:spinnerMode="dropdown" />

            <Button
                android:id="@+id/shufflebutton"
                style="@style/shufflebutton"
                android:tag="700"
                android:text="@string/shuffle" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            style="@style/wrapped"
            android:text="@string/moves"/>

        <TextView
            style="@style/wrapped"
            android:id="@+id/moves_textview"
            android:text=": 0"/>

    </LinearLayout>

</LinearLayout>
